remove dataproc from the docs

--- a/2022-07-24-spark-withfield-transform.mdx
+++ b/2022-07-24-spark-withfield-transform.mdx
@@ -5,7 +5,7 @@ author: Hayssam Saleh
 author_title: Starlake Core Team Member
 author_url: https://www.linkedin.com/in/hayssams/
 author_image_url: https://s.gravatar.com/avatar/04aa2a859a66b52787bcba8c36beba8c.png
-tags: [Spark, BigQuery, Dataproc, Google Cloud, ETL, Starlake]
+tags: [Spark, BigQuery, Google Cloud, ETL, Starlake]
 ---
 
 import Tabs from '@theme/Tabs';
@@ -58,10 +58,6 @@ Below is an example
 bq load
 ```
 
-
-Spark on the other end is a distributed engine that comes with a CSV, XML, JSON and TEXT parsing library that allows us
-to address any specific case at 'spark speed' and seamlessly connect with BigQuery
-using the [Google Spark BigQuery Connector](https://github.com/GoogleCloudDataproc/spark-bigquery-connector)
 
 #### Loading data with BigQuery
 <Tabs groupId="loadbq">
