--- a/blog/2021-12-15-spark-big-query-partitioning.mdx
+++ b/blog/2021-12-15-spark-big-query-partitioning.mdx
@@ -3,7 +3,7 @@ slug: spark-big-query-partitioning
 title: Handling Dynamic Partitioning and Merge with Spark on BigQuery
 authors:
     - hayssams
-tags: [Spark, BigQuery, Dataproc, Google Cloud, ETL, Starlake]
+tags: [Spark, BigQuery, Google Cloud, ETL, Starlake]
 ---
 
 import Tabs from '@theme/Tabs';
