--- a/blog/2022-02-15-rls-cls-big-query.mdx
+++ b/blog/2022-02-15-rls-cls-big-query.mdx
@@ -3,7 +3,7 @@ slug: rls-cls-big-query
 title: Column  and Row Level Security in BigQuery
 authors:
     - hayssams
-tags: [Spark, BigQuery, Dataproc, Google Cloud, ETL, Starlake]
+tags: [Spark, BigQuery, Google Cloud, ETL, Starlake]
 ---
 
 
