--- a/docs/0300-guides/500-orchestrate/100-tutorial.mdx
+++ b/docs/0300-guides/500-orchestrate/100-tutorial.mdx
@@ -110,4 +110,4 @@ dag:
 
 
 The load and transforms tasks will be run as bash commands on the orchestrator. To run them on a different executor, you can change the template to a different one or build your own.
-Starlake comes with a few templates out of the box targeting `cloud run` or `dataproc`.
+Starlake comes with templates out of the box.
