--- a/docs/0500-configuration/0110-connections.mdx
+++ b/docs/0500-configuration/0110-connections.mdx
@@ -48,7 +48,7 @@ application:
 
 ## Google BigQuery
 
-Starlake support native and spark / dataproc bigquery connections.
+Starlake support native and spark bigquery connections.
 <Tabs groupId="bq_connections">
 <TabItem label="BigQuery" value="bigquery">
 
