move reference out

--- a/0400-reference/0400-unit-tests/100-index.mdx
+++ b/0400-reference/0400-unit-tests/100-index.mdx
@@ -1,5 +1,5 @@
 ---
-id: starlake-load-reference
+id: starlake-unit-tests-reference
 title: Load Reference
 keywords: [starlake load, data pipeline load, etl load, data ingestion, data transformation]
 sidebar_position: 1
